--- a/practicase/src/main/resources/application.properties
+++ b/practicase/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 spring.application.name=practicase
 
-spring.datasource.url=TODO
-spring.datasource.username=TODO
-spring.datasource.password=TODO
+#spring.datasource.url=TODO
+#spring.datasource.username=TODO
+#spring.datasource.password=
+
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=pt;encrypt=true;trustServerCertificate=true
+spring.datasource.username=sa
+spring.datasource.password=Ander04
 
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
