--- a/practicase/src/main/resources/application.properties
+++ b/practicase/src/main/resources/application.properties
@@ -3,7 +3,8 @@ spring.application.name=practicase
 #spring.datasource.url=TODO
 #spring.datasource.username=TODO
 #spring.datasource.password=
-
+server.address=0.0.0.0
+server.port=8080
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=pt;encrypt=true;trustServerCertificate=true
 spring.datasource.username=sa
 spring.datasource.password=Ander04
