--- a/practicase/src/main/resources/application.properties
+++ b/practicase/src/main/resources/application.properties
@@ -5,9 +5,9 @@ spring.application.name=practicase
 #spring.datasource.password=
 server.address=0.0.0.0
 server.port=8080
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=pt;encrypt=true;trustServerCertificate=true
-spring.datasource.username=sa
-spring.datasource.password=Ander04
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
 
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
