--- a/practicase/src/main/resources/application.properties
+++ b/practicase/src/main/resources/application.properties
@@ -3,11 +3,8 @@ spring.application.name=practicase
 #spring.datasource.url=TODO
 #spring.datasource.username=TODO
 #spring.datasource.password=
-server.address=0.0.0.0
-server.port=8080
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=pt;encrypt=true;trustServerCertificate=true
-spring.datasource.username=sa
-spring.datasource.password=Ander04
+
+
 
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
@@ -28,3 +25,6 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
 spring.web.resources.static-locations=classpath:/static/
+server.forward-headers-strategy=framework
+
+
